# project1

./: README.md  pyproject.toml
src/: generators.py  masks.py  processing.py  widget.py
tests/: test_generators.py  test_mask.py  test_processing.py  test_widget.py
